--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-	"id": "batch-move-files",
-	"name": "Batch Move Files",
+	"id": "related-move-files",
+	"name": "Related Move Files",
 	"version": "0.0.7",
 	"minAppVersion": "0.15.0",
-	"description": "move file and relative links file to a new location",
-	"author": "xjiaxiang_86@163.com",
-	"authorUrl": "https://github.com/SaiRS",
+	"description": "A plugin for Obsidian that allows you to move file and all the related files (inlinks) in the file tree to a new folder.",
+	"author": "xjiaxiang86@gmail.com",
+	"authorUrl": "https://github.com/xjiaxiang",
 	"isDesktopOnly": true
 }
