build: sync to latest plugin template

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -13,6 +13,6 @@ changelog:
       labels:
         - Semver-Minor
         - enhancement
-    - title: Other Changes
+    - title: Miscellaneous
       labels:
         - "*"
