--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,11 @@
 {
-	"id": "related-move-files",
-	"name": "Related Move Files",
+	"id": "related-move",
+	"name": "Related Move",
 	"version": "0.0.7",
 	"minAppVersion": "0.15.0",
 	"description": "A plugin for Obsidian that allows you to move file and all the related files (inlinks) in the file tree to a new folder.",
 	"author": "xjiaxiang86@gmail.com",
 	"authorUrl": "https://github.com/xjiaxiang",
-	"isDesktopOnly": true
+	"fundingUrl": "",
+	"isDesktopOnly": false
 }
