--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -1,10 +1,12 @@
 on:
+  workflow_dispatch:
   push:
     branches:
       - master
 
 permissions:
   contents: write
+  issues: write
   pull-requests: write
 
 name: release-please
@@ -16,37 +18,33 @@ jobs:
       - uses: googleapis/release-please-action@v4
         id: release
         with:
-          # this assumes that you have created a personal access token
-          # (PAT) and configured it as a GitHub action secret named
-          # `RELEASE_PLEASE_TOKEN` (this secret name is not important).
-          token: ${{ secrets.GITHUB_TOKEN }}
-          # this is a built-in strategy in release-please, see "Action Inputs"
-          # for more options
-          release-type: node
+          token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
+          config-file: release-please-config.json
+          manifest-file: .release-please-manifest.json
 
       - name: Checkout code
-        if: ${{ steps.release.outputs.release_created }}
+        if: ${{ steps.release.outputs.release_created || steps.release.outputs.prs }}
         uses: actions/checkout@v4
 
       - name: Set up Node.js
         if: ${{ steps.release.outputs.release_created }}
         uses: actions/setup-node@v4
         with:
-          node-version: 22 # 指定 Node.js 版本
+          node-version: 22
 
       - name: Install pnpm
         if: ${{ steps.release.outputs.release_created }}
-        run: npm install -g pnpm # 安装 pnpm
+        run: npm install -g pnpm
 
       - name: Install dependencies and build
         if: ${{ steps.release.outputs.release_created }}
         run: |
           pnpm install --frozen-lockfile
           pnpm run build
-          mv dist batch-move-files && zip -r build.zip ./batch-move-files
+          echo "${{ steps.release.outputs.tag_name }}"
 
       - name: Upload Release Artifact
         if: ${{ steps.release.outputs.release_created }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh release upload ${{ steps.release.outputs.tag_name }} ./build.zip
+        run: gh release upload ${{ steps.release.outputs.tag_name }} ./dist/main.js ./dist/manifest.json ./dist/styles.css
