--- a/package.json
+++ b/package.json
@@ -1,36 +1,48 @@
 {
-	"name": "obsidian-move-file-plugin",
+	"name": "obsidian-related-move",
 	"version": "0.1.0-beta.2",
 	"description": "A plugin for Obsidian that allows you to move file and all the related files (inlinks) in the file tree to a new folder.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "vite build --watch",
 		"build": "vite build && cp manifest.json dist/",
-		"changelog": "pnpm release-it --ci --no-git.push",
 		"version": "node version-bump.mjs && git add manifest.json versions.json",
-		"lint": "biome check",
-		"lint:fix": "biome check --fix",
-		"test": "vitest",
+		"lint": "oxlint . && eslint .",
+		"lint:fix": "oxlint . --fix && eslint . --fix",
+		"fmt": "prettier --check .",
+		"test": "vitest run --passWithNoTests",
 		"prepare": "husky"
 	},
-	"keywords": ["obsidian", "plugin", "related move", "move files"],
-	"author": "xjiaxiang_86@163.com",
+	"keywords": [
+		"obsidian",
+		"plugin",
+		"related move",
+		"move files"
+	],
+	"author": "xjiaxiang",
 	"license": "MIT",
 	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
-		"@commitlint/cli": "^19.5.0",
-		"@commitlint/config-conventional": "^19.5.0",
+		"@commitlint/cli": "^20.1.0",
+		"@commitlint/config-conventional": "^20.0.0",
+		"@eslint/js": "^9.38.0",
 		"@types/node": "^22.7.5",
-		"builtin-modules": "4.0.0",
+		"@typescript-eslint/eslint-plugin": "^8.46.2",
+		"@typescript-eslint/parser": "^8.46.2",
+		"builtin-modules": "5.0.0",
+		"eslint": "^9.38.0",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-plugin-oxlint": "^1.24.0",
+		"eslint-plugin-prettier": "^5.5.4",
 		"husky": "^9.1.6",
-		"lint-staged": "^15.2.10",
-		"memfs": "^4.14.0",
+		"lint-staged": "^16.2.5",
+		"memfs": "^4.49.0",
 		"obsidian": "latest",
-		"release-it": "^17.11.0",
+		"oxlint": "^1.24.0",
+		"prettier": "^3.6.2",
 		"tslib": "^2.8.1",
-		"typescript": "5.6.3",
-		"vite": "6.0.2",
-		"vitest": "^2.1.3"
-	},
-	"dependencies": {}
+		"typescript": "^5.9.3",
+		"typescript-eslint": "^8.46.2",
+		"vite": "^7.1.11",
+		"vitest": "^3.2.4"
+	}
 }
