--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
 		"@commitlint/cli": "^20.1.0",
 		"@commitlint/config-conventional": "^20.0.0",
 		"@eslint/js": "^9.38.0",
+		"@sveltejs/vite-plugin-svelte": "^6.2.1",
+		"@tsconfig/svelte": "^5.0.5",
 		"@types/node": "^22.7.5",
 		"@typescript-eslint/eslint-plugin": "^8.46.2",
 		"@typescript-eslint/parser": "^8.46.2",
@@ -33,12 +35,17 @@
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-oxlint": "^1.24.0",
 		"eslint-plugin-prettier": "^5.5.4",
+		"eslint-plugin-svelte": "^3.13.0",
 		"husky": "^9.1.6",
 		"lint-staged": "^16.2.5",
 		"memfs": "^4.49.0",
 		"obsidian": "latest",
 		"oxlint": "^1.24.0",
 		"prettier": "^3.6.2",
+		"prettier-plugin-svelte": "^3.4.0",
+		"svelte": "^5.43.2",
+		"svelte-check": "^4.3.3",
+		"svelte-preprocess": "^6.0.3",
 		"tslib": "^2.8.1",
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.46.2",
