--- a/.github/workflows/update-license.yaml
+++ b/.github/workflows/update-license.yaml
@@ -10,13 +10,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
       - run: |
           node scripts/update-license.mjs
 
       # if there is an uncommited changes, commit them
       - name: Commit changes
         run: |
-          if git diff --quiet; then
+          if ! git diff --quiet; then
             git config user.name "github-actions[bot]"
           	git config user.email "github-actions[bot]@users.noreply.github.com"
             git add .
